--- a/package.json
+++ b/package.json
@@ -56,11 +56,8 @@
   },
   "dependencies": {
     "commander": "9.0.0",
-    "ffmpeg-static": "^4.4.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "get-artist-title": "^1.3.1",
-    "get-youtube-chapters": "^1.1.0",
-    "node-fetch": "3.2.0",
-    "ytdl-core": "^4.10.1"
+    "fluent-ffmpeg": "2.1.2",
+    "get-artist-title": "1.3.1",
+    "ytdl-core": "4.10.1"
   }
 }
