--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "CLI tools for converting YouTube videos to MP3 files. Extract timestamps from video chapters, description, comments and automatically splits output into appropriately named files.",
   "author": "Tim Mikeladze <tim.mikeladze@gmail.com>",
   "keywords": [
-    "youtube", "mp3", "youtube downloader", "chapters", "timestamps", "mp3", "youtube mp3"
+    "youtube",
+    "mp3",
+    "youtube downloader",
+    "chapters",
+    "timestamps",
+    "mp3",
+    "youtube mp3"
   ],
   "repository": {
     "type": "git",
@@ -40,7 +46,7 @@
     }
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.20",
+    "@types/fluent-ffmpeg": "2.1.20",
     "@types/jest": "27.4.0",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
@@ -60,6 +66,7 @@
     "commander": "9.0.0",
     "fluent-ffmpeg": "2.1.2",
     "get-artist-title": "1.3.1",
+    "node-id3": "0.2.3",
     "ytdl-core": "4.10.1"
   }
 }
