--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-youtube-mp3",
+  "name": "super-yt-mp3",
   "version": "0.0.2",
   "description": "CLI tools for converting YouTube videos to MP3 files. Extract timestamps from video chapters, description, comments and automatically splits output into appropriately named files.",
   "author": "Tim Mikeladze <tim.mikeladze@gmail.com>",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/TimMikeladze/super-youtube-mp3.git"
+    "url": "https://github.com/TimMikeladze/super-yt-mp3.git"
   },
   "license": "MIT",
   "files": [
